# gameuav

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
agent/: __init__.py  usage.md
comm/: __init__.py  agent_client.py  usage.md
docs/: git_workflow.md  ground_station_AGENTS.md  ros_interfaces.md  ros_interfaces_cn.md  uav_agent.md  uav_agent_cn.md
gateway/: __init__.py  usage.md
info/: 00_system_overview.mmd  01_launch_bringup.mmd  02_agent_comm_gateway.mmd  03_perception_state_estimation.mmd  04_planning_mission.mmd  05_control_takeoff.mmd  06_spf_smpf_six_tasks.md  07_vins_online_calibration_2026-07-19.md  08_spf_position_manual_target.md  09_vins_online_calibration_2026-07-21.md  10_spf_smpf_ego_profiles.md  11_vins_online_calibration_2026-07-22.md  README.md  system_architecture.md  系统架构说明.md
launch/: bringup_control_interface.launch  bringup_ego.launch  bringup_flight_control.launch  bringup_mavros.launch  bringup_px4ctrl.launch  bringup_realflight.launch  bringup_realsense.launch  bringup_rgb1_camera.launch  bringup_see_point_fly.launch  bringup_smpf.launch  bringup_state_estimation.launch  bringup_tiplight.launch  bringup_usb_camera.launch  bringup_vins.launch  bringup_vins_calibrated_candidate.launch  bringup_vins_online_calibration.launch
ros_nodes/actuation/led/tiplight/: CMakeLists.txt  esp32_led_control.py  package.xml  pyproject.toml  serial_interact.py
ros_nodes/actuation/led/tiplight/launch/: tiplight_serial.launch
ros_nodes/actuation/led/tiplight/scripts/: tiplight_serial_node.py
ros_nodes/actuation/led/tiplight/test/: test_tiplight_serial_node.py
ros_nodes/control/gameuav_control_interface/: CMakeLists.txt  package.xml
ros_nodes/control/gameuav_control_interface/launch/: control_interface.launch
ros_nodes/control/gameuav_control_interface/scripts/: control_interface_node.py
ros_nodes/control/px4ctrl/: CMakeLists.txt  package.xml
ros_nodes/control/px4ctrl/config/: ctrl_param_fpv.yaml  mavlink_stream_rates.yaml
ros_nodes/control/px4ctrl/launch/: mavros_px4_namespaced.launch  run_ctrl.launch
ros_nodes/control/px4ctrl/scripts/: configure_mavlink_streams.py
ros_nodes/control/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  controller.h  input.cpp  input.h  px4ctrl_node.cpp
ros_nodes/control/px4ctrl/test/: controller_test.cpp
ros_nodes/mission/see_point_fly_bridge/: CMakeLists.txt  package.xml
ros_nodes/mission/see_point_fly_bridge/launch/: see_point_fly_bridge.launch
ros_nodes/mission/see_point_fly_bridge/scripts/: see_point_fly_bridge.py  spf_task_executor.py
ros_nodes/mission/smpf_bridge/: CMakeLists.txt  package.xml
ros_nodes/mission/smpf_bridge/launch/: smpf_bridge.launch
ros_nodes/mission/smpf_bridge/scripts/: smpf_bridge.py
ros_nodes/perception/gameuav_usb_camera/: CMakeLists.txt  package.xml
ros_nodes/perception/gameuav_usb_camera/launch/: usb_camera.launch
ros_nodes/perception/gameuav_usb_camera/scripts/: realsense_nodelet_prelaunch.py  usb_camera_node.py
ros_nodes/perception/gameuav_usb_camera/src/: realsense_hw_reset.cpp
runtime/: camera_settings.json
src/: bspline_opt  camera_models  catkin_simple  cmake_utils  decomp_ros_msgs  decomp_ros_utils  drone_detect  ego_planner  gameuav_control_interface  gameuav_usb_camera  global_fusion  loop_fusion  path_searching  plan_env  pose_utils  px4ctrl  quadrotor_msgs  realsense2_camera  realsense2_description  see_point_fly_bridge  smpf_bridge  tiplight  traj_utils  uav_utils  vins_estimator
strategy/see_point_fly/upstream/: .gitignore  CITATION.cff  LICENSE  README.md  config_airsim.yaml  config_sim.yaml  config_tello.yaml  env.example  pyproject.toml
strategy/see_point_fly/upstream/docs/: 0904_historical_reference.md  coordinate_system_guide.md  obstacle_avoidance_hitorical_reference.md
strategy/see_point_fly/upstream/src/spf/: __init__.py  __main__.py  main.py
strategy/see_point_fly/upstream/src/spf/airsim/: __init__.py  action_projector.py  controller.py  drone_space.py  main.py  settings.json.example
strategy/see_point_fly/upstream/src/spf/base/: __init__.py  action_projector.py  drone_space.py
strategy/see_point_fly/upstream/src/spf/clients/: __init__.py  vlm_client.py
strategy/see_point_fly/upstream/src/spf/sim/: __init__.py  action_projector.py  controller.py  drone_space.py  main.py
strategy/see_point_fly/upstream/src/spf/tello/: __init__.py  action_projector.py  controller.py  drone_space.py  main.py
strategy/see_point_fly/upstream/src/spf_tools/: README.md  __init__.py  __main__.py  cli.py
strategy/see_point_fly/upstream/src/spf_tools/capture/: __init__.py
strategy/see_point_fly/upstream/src/spf_tools/diagnostics/: __init__.py  system_check.py
strategy/see_point_fly/upstream/src/spf_tools/resolution/: __init__.py
strategy/see_point_fly/upstream/src/spf_tools/vlm/: __init__.py  accuracy_tester.py
strategy/see_point_fly/upstream/src/spf_tools/vlm/test_images/: README.md
strategy/smpf/upstream/src/guide_module/: CMakeLists.txt  GuideNode.py  package.xml
strategy/smpf/upstream/src/guide_module/config/: config.json
strategy/smpf/upstream/src/guide_module/guide_vlm/: GuideVLP.py
strategy/smpf/upstream/src/guide_module/guide_vlm/lib/: MLM.py  Prompts.py  SAM.py  Solve3D.py
strategy/smpf/upstream/src/guide_module/guide_vlm/prompts/: detect_prompt.txt  type_prompt.txt
strategy/smpf/upstream/src/guide_module/ros_interface/: ROSInterFace.py
strategy/smpf/upstream/src/guide_module/utils/: Format.py  Image.py  Logging.py
systemd/: gameuav-px4ctrl-monitor.service
tests/: test_agent_protocol.py  test_agentctl.py  test_camera_stream_gateway.py  test_comm_network.py  test_control_interface_attitude_guard.py  test_control_interface_spf_gate.py  test_ego_profiles.py  test_gateway.py  test_launch_manager.py  test_ros_command_executor.py  test_smpf_artifacts.py  test_smpf_bridge_follow_freshness.py  test_smpf_deterministic_planner.py  test_smpf_execution.py  test_smpf_experiment_log.py  test_smpf_experiment_outcomes.py  test_smpf_follow_policy.py  (+17 more)
(+150 files in other folders)
