<?xml version="1.0"?>
<package format="2">
  <name>gameuav_control_interface</name>
  <version>0.1.0</version>
  <description>GameUAV control command facade for EGO, SPF, direct position, and speed commands.</description>

  <maintainer email="uav@example.com">GameUAV</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
