<?xml version="1.0"?>
<package format="2">
  <name>smpf_bridge</name>
  <version>0.1.0</version>
  <description>Calibrated See-Model-Plan-Fly perception, verification, and EGO goal bridge.</description>

  <maintainer email="uav@todo.todo">uav</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>realsense2_camera</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export />
</package>
