<?xml version="1.0"?>
<package format="2">
  <name>gameuav_usb_camera</name>
  <version>0.1.0</version>
  <description>Simple USB camera publisher for GameUAV.</description>

  <maintainer email="uav@example.com">GameUAV</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
