<?xml version="1.0"?>
<package format="2">
  <name>guide_module</name>
  <version>0.0.1</version>
  <description>Guide module for RGB-D IO and future language-guided control.</description>

  <maintainer email="uav@example.com">guide_module maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export/>
</package>
